@@ -32,11 +32,9 @@ no_index:
     - xt
 requires:
   Dist::Zilla::Role::BeforeBuild: '0'
-  Git::Wrapper: '0'
+  Git::Background: '0.003'
   Moose: '0'
   Path::Tiny: '0'
-  Safe::Isa: '0'
-  Try::Tiny: '0'
   namespace::autoclean: '0'
   perl: '5.006'
   strict: '0'
